# $Id: Changes,v 1.25 2003/07/18 20:55:44 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.54
	[DOCUMENTATION]
	* Added a sample CPAN search from Ed Silva.

	
0.53	July 16, 2003
	This version ONLY fixes some test-file problems.  There are no
	functionality enhancements or bug fixes in WWW::Mechanize itself.

	[FIXES]
	* Explicitly stringifies URI::file objects in the *.t files,
	  in hopes of getting the thread bummers fixed.  See RT
	  #2874 and #2880.

0.52	July 7, 2003
	[ENHANCEMENTS]
	* mech-forms now handles local files.
	* Added t/mech-forms.t to test the app
	* Added some parm-checking to submit_form()
	* All the warns are now carps.  Thanks to MJD for pointing
	  it out during his "Tricks Of The Wizards" talk.

	[FIXES]
	* Bumped up the Test::Builder requirement to 0.17, which
	  I hope will get rid of the thread problems with t/tick.t.
	  Thanks to Autrijus Tang for pointing out the note in
	  Builder.pm.

0.51	June 29, 2003
	[ENHANCEMENTS]
	* Added the "mech-forms" command to list all the forms on
	  a given page.

	[FIXES]
	* Made the tick.t test not rely on 2shortplanks.com.

0.50	June 24, 2003
	[ENHANCEMENTS]
	* Mech now does what most browsers do when they handle a
	  redirect: It changes the POST to a GET.  This doesn't match the
	  RFC, but it's what browsers do.  Thanks to Stuart Children.

0.49	June 23, 2003
	[FIXES]
	* Added a fix a while ago that tracks redirect history.  That fix
	  had the bad side effect of always allowing a redirect.
	  That has now been fixed.

0.48	June 22, 2003
	[ENHANCEMENTS]
	* Added find_all_links() as the counterpart to find_link().

	[FIXES]
	* get() wasn't passing through its parms to LWP::UserAgent::get(),
	  so you couldn't use the :content_file parm.  Now it
	  behaves like a good little subclass.

0.47	June 21, 2003
	[ENHANCEMENTS]
	* find_link() now lets you pass n=>"all" to get back a list
	  of all links that match the other criteria.  NOTE: Outdated!  See
	  v0.48 for the preferred way.